--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Halid Kopanski
 description: ST558 Blog Site for Halid Kopanski
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/hkopanski/hkopanski.github.io/blob/master/images/trex_plushie.jpg
+avatar: https://raw.githubusercontent.com/hkopanski/hkopanski.github.io/master/images/trex_plushie.jpg
 
 #
 # Flags below are optional
