--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: hkopanski.github.io
   instagram:
-  linkedin: linkedin.com/in/halidkopanski
+  linkedin: halidkopanski
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
